[package]
name = "service-ping"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/service-ping"
documentation = "https://docs.rs/service-ping"
description = "Ping service"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
quicli = "0.2.0"
actix = "0.5.6"
actix-web = "0.5.6"
human-panic = "0.4.0"

[dev-dependencies]
# clippy = "0.0"
